@@ -184,6 +184,9 @@ BUG FIXES
     o	source("clipboard", echo=TRUE) and file("clipboard", mode="rt")
 	gave spurious errors.  (Reported by Fernando Saldanha.)
 
+    o   attributes<-() stripped old attributes before checking that 
+	right hand side was well-formed.
+
 
 
 		CHANGES IN R VERSION 2.6.1
